# Mask-AI-Project

./: .gitignore  Query I.sql  README.md  pyproject.toml  requirements.txt
app/: db.py  llm.py  main.py  models.py  rag.py
static/css/: style.css
static/js/: script.js
templates/: index.html  layout.html
